@@ -10,14 +10,11 @@ AUX ruby-1.9.1-only-ncurses.patch 482 RMD160 ff2c50c5f21d8ea99e009d78a4f57a9b870
 AUX ruby-1.9.1-prefix.patch 495 RMD160 65895f35b6a26d0356e66655883ca094dbb2fbcc SHA1 1dbfcc675393df4b3522315e8460c80acbb3a613 SHA256 20ff9e74050caa25db82ac7ed148f2a2548ba201d474eff844f029ddd3a9552a
 AUX ruby-mkconfig.patch 407 RMD160 8fdec98672ce845a94c1b28a17747c1e9dd7ec72 SHA1 1e2b97282f4fa55d213dd0b4e7c75fc53367ce7f SHA256 b1ca3500ac50fa49fa1f478aa34f318cff8d92abcd75edfc80fd96338a59e2f4
 AUX ruby18-mkmf-parallel-install.patch 527 RMD160 1cb49132c4b1e6d9d9870b69a2fde79749faa5fe SHA1 8783e18b41563055d7f14cc42b3e30ac65bd6790 SHA256 3d24d95eb33ccb44413859fc6f731f01f8b7b59d8d4d9d6d6cd59e09d046eb78
-DIST ruby-1.8.6-p399.tar.bz2 3972399 RMD160 1c0bb41966c9f6011fa40b9de58ef95cb6610710 SHA1 4a7b5ec1ccbeb8c6c0c49c844471a5ee14cdaa98 SHA256 20ca08aeefa21ca2581a9791f8f9ace3addc92bd978cf36f2f95c109085a50a7
 DIST ruby-1.8.7-p302.tar.bz2 4184764 RMD160 763bc840316cb1080d46445cdc3ca7722d576591 SHA1 d93bd2f1099f3473b496cda2422b27a8da2beb00 SHA256 3537cc81cc2378a2bc319cd16c4237ddee14a2839cfd1515b27dce108d061a68
 DIST ruby-1.9.2-p0.tar.bz2 8495472 RMD160 dc15937c884b0f93863e9871304bae95e1233e15 SHA1 c0fc7e1047f1eac7e554e9818513593b0d398698 SHA256 e9710990ed8c2e794123aba509010471915fb13c27dae0118831d2001a9c8d3b
-DIST ruby-patches-1.8.6_p399.tar.bz2 3782 RMD160 d0faa549dc93ed1ff372ea8edac427e948c6c3bd SHA1 f1702eca97623a123ef49e38f21ac4cc0b0fe94e SHA256 d6b8218856ba4aaf0f0724035d13e165b82b17bc6a6f2b89800bf3628062f77b
 DIST ruby-patches-1.8.7_p302.tar.bz2 1768 RMD160 4db5e9d674555f863d71a5e807a39e08b3cfedeb SHA1 31fb976e35253b8e38b7851686fae715f9c197e8 SHA256 4d742cc7aedf6c56eba09e0f3e699ca24e38425944399db131aa49dc8f4f962a
 DIST ruby-patches-1.9.2.tar.bz2 2272 RMD160 d10f950c40384fe41f7eba14e55621aaa7c0ca06 SHA1 b9eb2d01f49ebf032257f84b00ec56420172234d SHA256 d4dd786cf637e5d4415b850bceca16caa9f6bd0b515fff09a64bdc18bc151de4
-EBUILD ruby-1.8.6_p399.ebuild 6047 RMD160 e0e853a553910136faa880e85706e53f31a5da5d SHA1 2e8acd4fb98d19ea74cbcb4f341da779b9515e1a SHA256 c2976aaa8b9690538931611bbb3bc28a190d9557cc48ad5d1113a4927ca885a1
 EBUILD ruby-1.8.7_p302.ebuild 6091 RMD160 73e39fe65f15e72ad249234a4c09514ce115f277 SHA1 320860e763729068c303c40f16fee11483f65e98 SHA256 9f836f0e1fc80bf507ebbc2628d5b7aae778ab49273ec60793ead0d81d25429c
-EBUILD ruby-1.9.2.ebuild 6519 RMD160 67a13cecf9c4eed0762bc75d492aa684d1168dd7 SHA1 787d65a1bbefbdcab82de04e173935c99b369b7b SHA256 e0f5ba7c51c32a484d31919a28e7cb394803b45b7bd13bf3fe5f1f3905e34439
-MISC ChangeLog 73918 RMD160 2f24e235c395993d4f68e957401ca8e4063541f6 SHA1 ffa17203f50b9b5a04bef1ae9b21600b9ce6a0dc SHA256 9a41d6bd388bf105956e2d9ab36f4602ef574e6fa74d2cf208d241795b610046
+EBUILD ruby-1.9.2.ebuild 6499 RMD160 7ef61f311a941dc4c24fdda02f9f6203ac231cbe SHA1 2b671d1e7e5e66f645a34439ef81b08fb503562b SHA256 307d21add7e3717c1baa4b946e2d3dd01239357c64fa81d15292484a86f3e0e1
+MISC ChangeLog 74197 RMD160 f94d28ad814c9a5f2ba5ad123c17fc416fb9e5a8 SHA1 094f218b86fcca6d9172ce5eee3c734c11589372 SHA256 0fa4b863eac1f0e0a074497d45e0924b7643db47b6f0bf83b47b5f0a05a47ff5
 MISC metadata.xml 1388 RMD160 2e3de2f87f5bade79976069f8a4e89ecff342d10 SHA1 a0ed685628b1f5de88e81e1aacc56c28bb2bb52f SHA256 365a88ae053d47050b6b50d05eb518755a3aeb0c91ca77d2d8eeabfd24a2447f
